--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     * {
       margin: 0;
       font-family: 'Urbanist', sans-serif;
+      text-decoration: none;
     }
   </style>
   <title>NCL Sell</title>
